--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
     "name": "Better YouTube Shorts",
     "description": "Playback controls (with J and L) and timestamp on YouTube Shorts.",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "manifest_version": 3,
     "content_scripts": [
         {
-            "matches": ["https://*.youtube.com/shorts/*"],
+            "matches": ["https://*.youtube.com/*"],
             "js": ["content-script.js"],
             "css": ["styles.css"]
         }
