Revert "dont execute on regular ytp"
This reverts commit 4c7cda1c9837184323a115bd5b4aed4f742254df.
This is because when redirecting from a non-shorts page, the extension it won't appear.

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
     "name": "Better YouTube Shorts",
     "description": "Playback and volume controls (with J, L, M, - and +) and timestamp on YouTube Shorts.",
-    "version": "1.4.0",
+    "version": "1.4.1",
     "manifest_version": 3,
     "content_scripts": [
         {
-            "matches": ["https://*.youtube.com/shorts/*"],
+            "matches": ["https://*.youtube.com/*"],
             "js": ["content-script.js"],
             "css": ["styles.css"]
         }
