--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Better YouTube Shorts",
-    "description": "Playback and volume controls (with J, L, M, - and +) and timestamp on YouTube Shorts.",
-    "version": "1.4.2",
+    "description": "Playback, volume controls (with custom keybinds), timestamp, and progress bar seeking on YouTube Shorts.",
+    "version": "2.0.0",
     "manifest_version": 3,
     "permissions": ["storage"],
     "action": {
