add uninstall redirect

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Better YouTube Shorts",
     "description": "Take back the controls on YouTube Shorts with playback, volume, progress bar and more.",
-    "version": "2.3.2",
+    "version": "2.3.3",
     "manifest_version": 3,
     "permissions": ["storage"],
     "action": {
@@ -9,6 +9,9 @@
     },
     "browser_action": {
         "default_popup": "popup.html"
+    },
+    "background" : {
+        "service_worker": "background.js"
     },
     "content_scripts": [
         {
