--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,30 @@
 {
-    "name": "Better YouTube Shorts",
-    "description": "Take back the controls on YouTube Shorts with playback, volume, progress bar and more.",
-    "version": "2.6.0",
-    "manifest_version": 3,
-    "permissions": ["storage"],
-    "action": {
-        "default_popup": "popup.html"
-    },
-    "background" : {
-        "service_worker": "background.js"
-    },
-    "content_scripts": [
-        {
-            "matches": ["https://*.youtube.com/*"],
-            "js": ["content-script.js"],
-            "css": ["styles.css"]
-        }
-    ],
-    "icons": {
-        "16": "icons/byts16.png",
-        "32": "icons/byts32.png",
-        "48": "icons/byts48.png",
-        "128": "icons/byts128.png"
+  "manifest_version": 3,
+  "name": "Better YouTube Shorts (BETA)",
+  "description": "Take back the controls on YouTube Shorts with playback, volume, progress bar and more.",
+  "version": "0.0.0",
+  "action": { "default_popup": "index.html" },
+  "permissions": ["storage"],
+
+  "content_scripts": [
+    {
+      "js": [
+        "src/content.ts"
+      ],
+      "matches": [
+        "https://*.youtube.com/*"
+      ]
     }
+  ],
+ 
+  "icons": {
+     "16": "src/assets/icons/bys-16.png",
+     "32": "src/assets/icons/bys-32.png",
+     "48": "src/assets/icons/bys-48.png",
+    "128": "src/assets/icons/bys-128.png"
+  },
+
+  "background": {
+    "service_worker": "src/background.ts"
+  }
 }
