--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "concurrently --kill-others \"sass --watch src/css\" \"vite\"",
     "build": "sass src/css && tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "ff-dev": "node firefox-watch.js"
   },
   "dependencies": {
     "react": "^18.0.0",
@@ -20,6 +21,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "concurrently": "^8.2.0",
+    "nodemon": "^3.0.1",
     "sass": "^1.66.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.15"
