--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,25 +22,20 @@ jobs:
       run: npm ci
 
     - name: Build Chrome extension
-      run: npm run build
-
-    - name: Zip extension
-      run: zip -r chrome-extension.zip dist
-  
-    - name: Clear dist folder
-      run: rm -rf dist
-
-    - name: Build Firefox extension
-      run: npm run build:firefox -- --skip-build
-
-    - name: Zip extension
-      run: zip -r firefox-extension.zip dist
+      run: |
+          npm run build
+          zip -r chrome-extension.zip dist
     
     - name: Upload Chrome extension
       uses: actions/upload-artifact@v2
       with:
         name: chrome-extension-${{ github.sha }}
         path: chrome-extension.zip
+
+    - name: Build Firefox extension
+      run: |
+          npm run build:firefox -- --skip-build
+          zip -r firefox-extension.zip dist
     
     - name: Upload Firefox extension
       uses: actions/upload-artifact@v2
