--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,23 +22,19 @@ jobs:
       run: npm ci
 
     - name: Build Chrome extension
-      run: |
-          npm run build
-          zip -r chrome-extension.zip dist
+      run: npm run build
     
     - name: Upload Chrome extension
       uses: actions/upload-artifact@v3
       with:
         name: chrome-extension-${{ github.sha }}
-        path: chrome-extension.zip
+        path: dist
 
     - name: Build Firefox extension
-      run: |
-          npm run build:firefox -- --skip-build
-          zip -r firefox-extension.zip dist
+      run: npm run build:firefox -- --skip-build
     
     - name: Upload Firefox extension
       uses: actions/upload-artifact@v3
       with:
         name: firefox-extension-${{ github.sha }}
-        path: firefox-extension.zip
+        path: dist
