--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,9 +2,9 @@ name: Build Extension with Node.js
 
 on:
   push:
-    branches: [ "master", "v3" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "master", "v3" ]
+    branches: [ "master" ]
 
 jobs:
   build:
@@ -27,7 +27,7 @@ jobs:
     - name: Upload Chrome extension
       uses: actions/upload-artifact@v3
       with:
-        name: chrome-extension-${{ github.sha }}
+        name: bys-chrome-${{ github.sha }}
         path: dist
 
     - name: Build Firefox extension
@@ -36,5 +36,5 @@ jobs:
     - name: Upload Firefox extension
       uses: actions/upload-artifact@v3
       with:
-        name: firefox-extension-${{ github.sha }}
+        name: bys-firefox-${{ github.sha }}
         path: dist
