--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "concurrently --kill-others \"sass --watch src/css\" \"vite\"",
     "build": "sass src/css && tsc && vite build",
     "preview": "vite preview",
-    "dev:firefox": "node firefox-watch.js",
-    "build:firefox": "node firefox-build-manifest.js"
+    "dev:firefox": "node scripts/firefox-watch.js",
+    "build:firefox": "node scripts/firefox-build-manifest.js"
   },
   "dependencies": {
     "react": "^18.0.0",
@@ -20,8 +20,12 @@
     "@types/firefox-webext-browser": "^111.0.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "@vitejs/plugin-react": "^1.3.0",
     "concurrently": "^8.2.0",
+    "eslint": "^8.51.0",
+    "eslint-plugin-react": "^7.33.2",
     "nodemon": "^3.0.1",
     "sass": "^1.66.0",
     "typescript": "^4.6.3",
