--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@vitejs/plugin-react": "^1.3.0",
     "concurrently": "^8.2.0",
     "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "nodemon": "^3.0.1",
+    "prettier": "3.0.3",
     "sass": "^1.66.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.15"
