--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,9 +2,9 @@ name: Build Extension with Node.js
 
 on:
   push:
-    branches: ["master"]
+    branches: "*"
   pull_request:
-    branches: ["master"]
+    branches: "*"
 
 jobs:
   build:
