--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,7 +2,11 @@ name: Build Extension with Node.js
 
 on:
   push:
-    branches: "*"
+    branches:
+      - "*"
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
